mysql-client-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: some-mysql
  labels:
    name: some-mysql
spec:
  containers:
    - image: launcher.gcr.io/google/mysql5
      name: mysql
