helloweb-service-static-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloweb
  labels:
    app: hello
  cloud.google.com/load-balancer-type: "Internal"
spec:
  selector:
    app: hello
    tier: web
  ports:
  - port: 80
    targetPort: 8080
  type: LoadBalancer
  loadBalancerIP: "YOUR.IP.ADDRESS.HERE"
