my-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: apache-httpd-service
          servicePort: 80
      - path: /wassup
        backend:
          serviceName: nginx-2-service
          servicePort: 80
